message brokers added

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,21 @@ POSTGRES_PASSWORD="password"
 MONGO_DB_URI="mongodb://localhost:27017"
 MONGO_DB_NAME="test"
 MONGO_DB_COLLECTION="collectionName"
+
+# Kafka
+KAFKA_ADDRESS="localhost:9092"
+KAFKA_TOPIC_USER_CREATED="topicName"
+KAFKA_TOPIC_USER_UPDATED="topicName"
+KAFKA_TOPIC_USER_DELETED="topicName"
+KAFKA_TOPIC_COMPUTER_CREATED="topicName"
+KAFKA_TOPIC_COMPUTER_UPDATED="topicName"
+KAFKA_TOPIC_COMPUTER_DELETED="topicName"
+
+# RabbitMQ
+RabbitMQ_ADDRESS="amqp://guest:guest@localhost:5672"
+RabbitMQ_QUEUE_USER_CREATED="queueName"
+RabbitMQ_QUEUE_USER_UPDATED="queueName"
+RabbitMQ_QUEUE_USER_DELETED="queueName"
+RabbitMQ_QUEUE_COMPUTER_CREATED="queueName"
+RabbitMQ_QUEUE_COMPUTER_UPDATED="queueName"
+RabbitMQ_QUEUE_COMPUTER_DELETED="queueName"
